# paint-piet

./: .gitignore  CMakeLists.txt  CMakePresets.json  ConanPresets.json  DartConfiguration.tcl  LICENSE  Makefile  README.md  binary_attempt.c  build.sh  build_multiplatform.sh  colormatrix.c  compile_commands.json  conan_populate.sh  conan_w32.sh  conanfile.py  count_length.c  count_words.c  custom_utils.c  custom_utils.h  generate_compile_commands.sh  headers.h  hello_world_gtk.c  in.txt  main.c  make_back  makefile  out.txt  run_build_32w.sh  run_build_li.sh  run_build_w.sh  setup.sh  spng.c  structs.h  sudo  test.c  test.sh  test_text.txt  transform_layout.sh
.cache/clangd/index/: main.c.4BFA8B74B04EEDA6.idx  test.c.776A2E438CCA4023.idx
cmake/: FindCheck.cmake
conan-profiles/: win-32  windows
legacy_code/: binary_attempt.c  legacy_test.c  spng.c
libs/logger/: CMakeLists.txt  logger.c
libs/logger/src/: logger.c
libs/paint-piet-runtime/: CMakeLists.txt
libs/paint-piet-runtime/include/: paint-piet-runtime.h  piet-commands.h
libs/paint-piet-runtime/src/: colormatrix.c  piet-commands.c  pointer.c  utils.c
logger/: logger.c  logger.h
src/: CMakeLists.txt  colormatrix.c  custom_utils.c  headers.h  local_prints.c  main.c  paint-piet.h  piet-commands.c  project-headers.h  runtime.c  structs.h
src/gui/: CMakeLists.txt  gui.c  paint-piet.ui  paint-piet_gtk3.ui
tests/: CMakeLists.txt  test.c  test_defs.h  test_headers.h  test_suits_and_cases.c  tests
